--- a/Opdracht/frontend/style.css
+++ b/Opdracht/frontend/style.css
@@ -1,14 +1,141 @@
-body {
-  background-color: black;
-  color: red;
+:root {
+  --ship-blue: #4f93ab;
+  --ship-blue-accent: #267997;
+
+  --background-color: rgba(185, 185, 185, 1);
+}
+body,
+html {
+  background-color: var(--background-color);
+  color: black;
+  padding: 0;
+  margin: 0;
+}
+
+/* Nav */
+
+nav {
+  background-color: var(--ship-blue);
+  color: white;
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 1em;
+  filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+}
+
+.nav-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
+.nav-right {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: start;
+}
+
+.nav-left > *,
+.nav-right > * {
+  margin: 0 0.2em;
+}
+
+.nav-title {
   font-weight: bold;
+  font-size: 1.2em;
+}
+
+/* Main Content*/
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 98vw;
+  /* background-color: red; */
+  margin: 1.5em auto;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 3em;
+  border-bottom: 3px solid black;
+}
+.row > div {
+  flex-basis: 50%;
+  flex-grow: 1;
+  margin: 0 0.5em;
+  filter: drop-shadow(0.1em 0.2em 0.25rem rgba(0, 0, 0, 0.5));
+}
+
+/* Panels */
+.panel {
+  padding: 0.7em;
+  background-color: var(--ship-blue);
+  border: 1px solid var(--ship-blue-accent);
+
+  border-radius: 1.3em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.panel-title {
+  color: white;
+  font-weight: bold;
+  font-size: 1.1em;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-bottom: 2px solid white;
+  padding: 0.3em 0.9em;
+}
+
+.panel-title > p {
+  margin: 0.1em 0.3em;
+}
+
+.panel-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.panel-content-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* padding: 0em 0.5em; */
+  margin: 0em 0.5em;
+  border-bottom: 1px solid white;
+}
+.panel-content-row > p {
+  margin: 0.5em 0.5em;
+}
+
+#statistics {
+  flex-basis: 40%;
+  flex-grow: 0;
+}
+
+#map {
+  width: 100%;
+  height: 70vh;
+}
+
+/* General Elements */
+button {
+  padding: 0.3em 0.7em;
 }
 
 ul > li {
   text-decoration: none;
   list-style-type: none;
-}
-#map {
-  width: 100%;
-  height: 70vh;
 }
