--- a/Opdracht/frontend/style.css
+++ b/Opdracht/frontend/style.css
@@ -13,6 +13,16 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Animations */
+@keyframes pop_in {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /* Nav */
 
 nav {
@@ -28,20 +38,21 @@ nav {
   /* filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5)); */
 }
 
-.nav-left {
+#nav-left {
   display: flex;
   flex-direction: row;
   justify-content: start;
   align-items: center;
 }
-.nav-right {
+#nav-right {
   display: flex;
   flex-direction: row;
   justify-content: start;
+  margin-right: 2.5rem;
 }
 
-.nav-left > *,
-.nav-right > * {
+#nav-left > *,
+#nav-right > * {
   margin: 0 0.6em;
 }
 
@@ -68,6 +79,56 @@ nav {
   height: 5em;
   margin-left: 2vw;
 }
+.bluebutton::before {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top: 2.6rem;
+  height: 0;
+  width: 0%;
+  content: "";
+  border-bottom: 2px solid white;
+  transition: width 0.2s;
+}
+
+.bluebutton:hover::before {
+  width: 60%;
+  transition: width 0.4s;
+}
+.bluebutton {
+  position: relative;
+  background-color: var(--ship-blue-accent);
+  padding: 1rem 1.5rem;
+  line-height: 1.3rem;
+  border-radius: 0.5em;
+  border: none;
+  color: white;
+  font-weight: 640;
+  transition: filter 0.4s;
+  user-select: none;
+}
+
+.bluebutton:hover {
+  cursor: pointer;
+  font-weight: 700;
+  filter: contrast(1.3) drop-shadow(0.1em 0.2em 0.25rem rgba(0, 0, 0, 0.5));
+  transition: filter 0.4s;
+}
+/* .nav-link::after {
+  font-weight: bolder;
+  content: ">";
+  display: inline;
+  padding-left: 0.5em;
+  transition: padding 0.4s;
+}
+.nav-link:hover::after {
+  content: ">";
+  padding-left: 0.8em;
+  transition: padding 0.4s;
+} */
+
 /* Main Content*/
 .content-wrapper {
   display: flex;
@@ -346,4 +407,123 @@ ul > li {
     border-bottom: 0px dotted white;
     border-right: 2px dotted white;
   }
+}
+
+#logout-button {
+  display: none;
+}
+
+/* Form */
+.modal-close {
+  font-family: "Font Awesome 5 Free";
+  content: "";
+  color: white;
+  font-size: 2em;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0.4em 0.6em;
+  z-index: 30;
+  transition: transform 0.3s, filter 0.3s;
+}
+
+.hidden {
+  display: none !important;
+  pointer-events: none !important;
+}
+.modal-close:hover {
+  cursor: pointer;
+  filter: drop-shadow(0.1em 0.1em 0.2rem rgba(0, 0, 0, 0.5));
+  transform: scale(1.05) translate(0, -0.1em);
+  transition: transform 0.3s, filter 0.3s;
+}
+
+.modal {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  position: fixed;
+  background-color: var(--ship-blue);
+  filter: drop-shadow(0.1em 0.2em 0.25rem rgba(0, 0, 0, 0.5));
+  border: 1px solid var(--ship-blue-accent);
+  border-radius: 1em;
+  z-index: 20;
+
+  height: fit-content;
+  width: 50vw;
+
+  animation: pop_in 0.3s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  padding-bottom: 2em;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  width: 60%;
+}
+
+.backdrop {
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(0.2em);
+  z-index: 10;
+  display: block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: start;
+  width: 100%;
+  gap: 1em;
+}
+
+.modal-form > label {
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.modal-title {
+  text-decoration: underline;
+}
+
+.modal-form input[type="text"],
+input[type="email"],
+input[type="password"] {
+  padding: 0.5em 0.5em;
+  border-radius: 0.5em;
+  border: 2px solid white;
+  background-color: var(--ship-blue-accent);
+  color: white;
+}
+
+.modal-form button {
+  width: fit-content;
+  padding: 1em 1em;
+  margin: auto;
+}
+
+.login-form-indicator {
+  color: rgb(255, 255, 255);
+  background-color: red;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  font-weight: bold;
+  text-align: center;
+  display: none;
 }
