--- a/Opdracht/frontend/style.css
+++ b/Opdracht/frontend/style.css
@@ -1,9 +1,4 @@
-:root {
-  --ship-blue: #4f93ab;
-  --ship-blue-accent: #267997;
-
-  --background-color: rgba(185, 185, 185, 1);
-}
+@import url("variables.css");
 body,
 html {
   background-color: var(--background-color);
@@ -407,10 +402,6 @@ ul > li {
     border-bottom: 0px dotted white;
     border-right: 2px dotted white;
   }
-}
-
-#logout-button {
-  display: none;
 }
 
 /* Form */
