--- a/Opdracht/frontend/rooster.css
+++ b/Opdracht/frontend/rooster.css
@@ -90,6 +90,7 @@
   flex-direction: row;
   gap: 0.5rem;
   justify-content: left;
+  align-items: center;
   min-width: fit-content;
 }
 
@@ -103,4 +104,30 @@
 }
 .schedule-data-row-delete {
   margin-left: auto;
+  font-size: 0.9rem;
+  transition: color 0.3s;
+}
+.schedule-data-row-delete:hover {
+  color: red;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.schedule-add {
+  font-family: "Font Awesome 6 Free";
+  position: absolute;
+  right: 0;
+  top: 0;
+  /* background-color: red; */
+  color: white;
+  font-size: 1.5rem;
+  margin: 1rem;
+  border-radius: 50%;
+  transition: color 0.3s;
+}
+
+.schedule-add:hover {
+  color: lime;
+  cursor: pointer;
+  transition: color 0.3s;
 }
